// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serverless generator should setup deno-deploy project 1`] = `
Object {
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-deno-deploy-app",
  "projectType": "application",
  "root": "apps/my-deno-deploy-app",
  "sourceRoot": "apps/my-deno-deploy-app/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nrwl/deno:emit",
      "options": Object {
        "denoConfig": "apps/my-deno-deploy-app/deno.json",
        "main": "apps/my-deno-deploy-app/src/main.ts",
        "outputFile": "dist/apps/my-deno-deploy-app/main.js",
      },
      "outputs": Array [
        "dist/apps/my-deno-deploy-app",
      ],
    },
    "deploy": Object {
      "configurations": Object {
        "preview": Object {
          "command": "deployctl deploy --project=<Your-Deno-Deploy-Project-Name> --import-map=import_map.json --exclude=node_modules apps/my-deno-deploy-app/src/main.ts",
        },
        "production": Object {
          "command": "deployctl deploy --project=<Your-Deno-Deploy-Project-Name> --import-map=import_map.json --exclude=node_modules --prod apps/my-deno-deploy-app/src/main.ts",
        },
      },
      "executor": "nx:run-commands",
      "options": Object {
        "command": "deployctl deploy --project=<Your-Deno-Deploy-Project-Name> --import-map=import_map.json --exclude=node_modules  apps/my-deno-deploy-app/src/main.ts --dry-run",
      },
    },
    "lint": Object {
      "executor": "@nrwl/deno:lint",
      "options": Object {
        "denoConfig": "apps/my-deno-deploy-app/deno.json",
      },
    },
    "serve": Object {
      "executor": "@nrwl/deno:run",
      "options": Object {
        "buildTarget": "my-deno-deploy-app:build",
      },
    },
    "test": Object {
      "executor": "@nrwl/deno:test",
      "options": Object {
        "coverageDirectory": "coverage/apps/my-deno-deploy-app",
        "denoConfig": "apps/my-deno-deploy-app/deno.json",
      },
      "outputs": Array [
        "coverage/apps/my-deno-deploy-app",
      ],
    },
  },
}
`;

exports[`serverless generator should setup empty project 1`] = `
Object {
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-plain-app",
  "projectType": "application",
  "root": "apps/my-plain-app",
  "sourceRoot": "apps/my-plain-app/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nrwl/deno:emit",
      "options": Object {
        "denoConfig": "apps/my-plain-app/deno.json",
        "main": "apps/my-plain-app/src/main.ts",
        "outputFile": "dist/apps/my-plain-app/main.js",
      },
      "outputs": Array [
        "dist/apps/my-plain-app",
      ],
    },
    "deploy": Object {
      "executor": "nx:run-commands",
      "options": Object {
        "command": "echo \\"TODO configure deploy target\\"",
      },
    },
    "lint": Object {
      "executor": "@nrwl/deno:lint",
      "options": Object {
        "denoConfig": "apps/my-plain-app/deno.json",
      },
    },
    "serve": Object {
      "executor": "@nrwl/deno:run",
      "options": Object {
        "buildTarget": "my-plain-app:build",
      },
    },
    "test": Object {
      "executor": "@nrwl/deno:test",
      "options": Object {
        "coverageDirectory": "coverage/apps/my-plain-app",
        "denoConfig": "apps/my-plain-app/deno.json",
      },
      "outputs": Array [
        "coverage/apps/my-plain-app",
      ],
    },
  },
}
`;

exports[`serverless generator should setup in --directory 1`] = `
Object {
  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
  "name": "nested-my-plain-app",
  "projectType": "application",
  "root": "apps/nested/my-plain-app",
  "sourceRoot": "apps/nested/my-plain-app/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nrwl/deno:emit",
      "options": Object {
        "denoConfig": "apps/nested/my-plain-app/deno.json",
        "main": "apps/nested/my-plain-app/src/main.ts",
        "outputFile": "dist/apps/nested/my-plain-app/main.js",
      },
      "outputs": Array [
        "dist/apps/nested/my-plain-app",
      ],
    },
    "deploy": Object {
      "executor": "nx:run-commands",
      "options": Object {
        "command": "echo \\"TODO configure deploy target\\"",
      },
    },
    "lint": Object {
      "executor": "@nrwl/deno:lint",
      "options": Object {
        "denoConfig": "apps/nested/my-plain-app/deno.json",
      },
    },
    "serve": Object {
      "executor": "@nrwl/deno:run",
      "options": Object {
        "buildTarget": "nested-my-plain-app:build",
      },
    },
    "test": Object {
      "executor": "@nrwl/deno:test",
      "options": Object {
        "coverageDirectory": "coverage/apps/nested/my-plain-app",
        "denoConfig": "apps/nested/my-plain-app/deno.json",
      },
      "outputs": Array [
        "coverage/apps/nested/my-plain-app",
      ],
    },
  },
}
`;

exports[`serverless generator should setup netlify project 1`] = `
Object {
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-netlify-app",
  "projectType": "application",
  "root": "apps/my-netlify-app",
  "sourceRoot": "apps/my-netlify-app/src",
  "tags": Array [],
  "targets": Object {
    "deploy": Object {
      "configurations": Object {
        "production": Object {
          "command": "yarn netlify deploy --prod-if-unlocked --site=<Your-Netlify-Site-Name>",
          "cwd": "apps/my-netlify-app",
        },
      },
      "executor": "nx:run-commands",
      "options": Object {
        "command": "yarn netlify deploy --site=<Your-Netlify-Site-Name>",
        "cwd": "apps/my-netlify-app",
      },
    },
    "lint": Object {
      "executor": "@nrwl/deno:lint",
      "options": Object {
        "denoConfig": "apps/my-netlify-app/deno.json",
      },
    },
    "serve": Object {
      "executor": "nx:run-commands",
      "options": Object {
        "command": "yarn netlify dev",
        "cwd": "apps/my-netlify-app",
      },
    },
    "test": Object {
      "executor": "@nrwl/deno:test",
      "options": Object {
        "coverageDirectory": "coverage/apps/my-netlify-app",
        "denoConfig": "apps/my-netlify-app/deno.json",
      },
      "outputs": Array [
        "coverage/apps/my-netlify-app",
      ],
    },
  },
}
`;
